--- a/INB1OO/app/src/main/res/layout/activity_main.xml
+++ b/INB1OO/app/src/main/res/layout/activity_main.xml
@@ -110,8 +110,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
-        android:layout_height="350dp"
+        android:layout_width="377dp"
+        android:layout_height="378dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -126,8 +126,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/validate"
-            android:textSize="15sp"
             android:textColor="@color/blue"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.053"
@@ -140,8 +140,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/numCard"
-            android:textSize="15sp"
             android:textColor="@color/blue"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.06"
@@ -158,8 +158,8 @@
             android:hint="@string/cvv"
             android:inputType="number"
             android:labelFor="@id/tvCvv"
-            android:textSize="16sp"
             android:maxLength="3"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.859"
@@ -192,8 +192,8 @@
             android:ems="10"
             android:hint="@string/validate"
             android:inputType="date"
-            android:textSize="17sp"
             android:maxLength="4"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.063"
@@ -206,8 +206,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cvv"
-            android:textSize="15sp"
             android:textColor="@color/blue"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.625"
@@ -236,8 +236,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/mail"
-            android:textSize="15sp"
             android:textColor="@color/blue"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.047"
@@ -250,8 +250,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:textSize="15sp"
             android:textColor="@color/blue"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.048"
@@ -276,6 +276,17 @@
             app:layout_constraintVertical_bias="0.075"
 
             />
+
+        <Spinner
+            android:id="@+id/spTypeCard"
+            android:layout_width="115dp"
+            android:layout_height="36dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.939"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.334" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
