--- a/INB1OO/app/src/main/res/layout/activity_main.xml
+++ b/INB1OO/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/snow"
     tools:context=".MainActivity">
 
     <TextView
@@ -110,8 +110,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="377dp"
-        android:layout_height="378dp"
+        android:layout_width="377sp"
+        android:layout_height="378sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -152,7 +152,7 @@
         <EditText
             android:id="@+id/etCvv"
             android:layout_width="123dp"
-            android:layout_height="39dp"
+            android:layout_height="48dp"
             android:autofillHints="creditCardSecurityCode"
             android:ems="10"
             android:hint="@string/cvv"
@@ -162,21 +162,22 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.859"
+            app:layout_constraintHorizontal_bias="0.858"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.627" />
+            app:layout_constraintVertical_bias="0.636" />
 
         <EditText
-            android:id="@+id/etNumTarjeta"
+            android:id="@+id/etNumCard"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:autofillHints="creditCardNumber"
             android:ems="10"
             android:hint="@string/numCard"
             android:inputType="number"
             android:maxLength="16"
             android:textSize="17sp"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.09"
@@ -185,21 +186,52 @@
             app:layout_constraintVertical_bias="0.343" />
 
         <EditText
-            android:id="@+id/etValidate"
-            android:layout_width="126dp"
-            android:layout_height="41dp"
+            android:id="@+id/etExpiryM"
+            android:layout_width="40dp"
+            android:layout_height="48dp"
             android:autofillHints="creditCardExpirationDate"
             android:ems="10"
-            android:hint="@string/validate"
-            android:inputType="date"
-            android:maxLength="4"
+            android:hint="@string/fMonth"
+            android:inputType="number"
+            android:maxLength="2"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.063"
+            app:layout_constraintHorizontal_bias="0.047"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.631" />
+            app:layout_constraintVertical_bias="0.636" />
+
+        <TextView
+            android:id="@+id/tvDateFormat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/formatDate"
+            android:textColor="@color/blue"
+            android:textSize="35sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.165"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.634" />
+
+        <EditText
+            android:id="@+id/etExpiryY"
+            android:layout_width="40dp"
+            android:layout_height="48dp"
+            android:autofillHints="creditCardExpirationDate"
+            android:ems="10"
+            android:hint="@string/fYear"
+            android:inputType="number"
+            android:maxLength="2"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.636" />
 
         <TextView
             android:id="@+id/tvCvv"
@@ -217,8 +249,8 @@
 
         <EditText
             android:id="@+id/etMail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="336dp"
+            android:layout_height="48dp"
             android:autofillHints="emailAddress"
             android:ems="10"
             android:hint="@string/mail"
@@ -226,10 +258,10 @@
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.094"
+            app:layout_constraintHorizontal_bias="0.39"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.918" />
+            app:layout_constraintVertical_bias="0.915" />
 
         <TextView
             android:id="@+id/tvMail"
@@ -260,9 +292,9 @@
             app:layout_constraintVertical_bias="0.01" />
 
         <EditText
-            android:id="@+id/editTextText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/etName"
+            android:layout_width="336dp"
+            android:layout_height="48dp"
             android:autofillHints="name"
             android:ems="10"
             android:hint="@string/name"
@@ -270,23 +302,37 @@
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.09"
+            app:layout_constraintHorizontal_bias="0.39"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.075"
+            app:layout_constraintVertical_bias="0.068"
 
             />
+
+        <TextView
+            android:id="@+id/tvNetwork"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/red"
+            android:textColor="@color/blue"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.703"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.262" />
 
         <Spinner
             android:id="@+id/spTypeCard"
             android:layout_width="115dp"
-            android:layout_height="36dp"
+            android:layout_height="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.939"
+            app:layout_constraintHorizontal_bias="0.938"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.334" />
+            app:layout_constraintVertical_bias="0.342" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
