--- a/INB1OO/app/src/main/res/layout/activity_main2.xml
+++ b/INB1OO/app/src/main/res/layout/activity_main2.xml
@@ -17,24 +17,61 @@
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="281dp"
-        android:layout_height="36dp"
+        android:layout_width="355dp"
+        android:layout_height="61dp"
+        android:fontFamily="@font/manrope_medium"
+        android:gravity="center"
+        android:maxLines="1"
+        android:singleLine="false"
         android:text="@string/clientName"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.168" />
+        app:layout_constraintVertical_bias="0.114" />
+
 
     <TextView
         android:id="@+id/tvMessageOperation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="412dp"
+        android:layout_height="135dp"
+        android:fontFamily="@font/manrope_medium"
+        android:gravity="center"
+        android:paddingStart="25dp"
+        android:paddingEnd="16dp"
         android:text=""
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.538" />
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gifOperationValidate"
+        android:layout_width="250dp"
+        android:layout_height="85dp"
+        android:src="@drawable/operation_approved"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.311" />
+
+    <Button
+        android:id="@+id/btnDone"
+        android:layout_width="171dp"
+        android:layout_height="53dp"
+        android:backgroundTint="@color/teal"
+        android:text="@string/btnDone"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.90" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
