Updated: MainActivity2 and translation

--- a/INB1OO/app/src/main/res/layout/activity_main2.xml
+++ b/INB1OO/app/src/main/res/layout/activity_main2.xml
@@ -47,7 +47,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.538" />
+        app:layout_constraintVertical_bias="0.538"
+        tools:ignore="@strings/rOpe" />
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifOperationValidate"
